syntax = "proto3";
package pb;

service GraphService {
    rpc CreateGraph(CreateRequest) returns (CreateResponse) {}
    rpc ShortestPath(ShortestPathRequest) returns (ShortestPathResponse) {}
    rpc DeleteGraph(DeleteRequest) returns (DeleteResponse) {}
}

message CreateRequest {
    repeated Edge edges = 1;
}

message Edge {
    string source = 1;
    string dest   = 2;
}

message CreateResponse {
    string graphId = 1;
    string err     = 2;
}

message ShortestPathRequest {
    string graphId     = 1;
    string source      = 2;
    string destination = 3;
}

message ShortestPathResponse {
    string shortestPath = 1;
    string err          = 2;
}

message DeleteRequest {
    string graphId = 1;
}

message DeleteResponse {
    string message = 1;
    string err     = 2;
}
